# exchangeHouse_api/Domain/ValueObject/BenefitCategoryc.cs
@@ -1,10 +1,0 @@
-﻿namespace exchangeHouse_api.Domain.ValueObject
-{
-    public enum BenefitCategoryc
-    {
-        ITEM,
-        DAYOFF,
-        SERVICE,
-        OTHER
-    }
-}
